# aws-wasm-components

./: .gitignore  build.sh  run.sh
ec2/: Cargo.toml
ec2/src/: bindings.rs  lib.rs
ec2/wit/: world.wit
example-cli/: Cargo.toml
example-cli/src/: bindings.rs  main.rs
example-cli/wit/: world.wit
